[package]
name = "debitoor-extensions"
version = "0.5.0"
authors = ["Markus Heberling <markus@tisoft.de>"]
publish = false

[dependencies]
rocket = "0.4"
rocket_contrib = { version = "0.4", features = [ "handlebars_templates"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ureq = "0.8"
